Implementing JWT authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=password
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# App properties
+budjetapi.app.jwtSecret=budjetapiSecretKey
+budjetapi.app.jwtExpirationMs=86400000
