--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Flyway
 spring.flyway.enabled=false
+
+# App properties
+budjetapi.app.jwtSecret=budjetapiSecretKey
+budjetapi.app.jwtExpirationMs=86400000
